style(expandablecontainer): includes placeholder component so that text can be correctly styled with dark mode

--- a/components/ExpandableContainer/styles.module.css
+++ b/components/ExpandableContainer/styles.module.css
@@ -52,3 +52,9 @@
   justify-content: space-between;
   gap: 8px;
 }
+
+.ExpandableContainerPlaceholderText {
+  font: var(--font-color);
+  size: 16px;
+  font-weight: bold;
+}
